--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,32 @@ html, body {
     grid-template-columns: auto 1fr;
 }
 
+#container {
+    margin: auto;
+    width: 40vw;
+}
+
+#logo {
+    background: white;
+    border: 3px solid black;
+    border-radius: 10px;
+    padding: 10px;
+    margin-right: 20px;
+}
+
 #headercontent {
     background: white;
     border: 3px solid black;
     border-radius: 10px;
     padding: 10px;
+}
+
+#maincontent {
+    background: white;
+    border: 3px solid black;
+    border-radius: 10px;
+    padding: 10px;
+    margin-top: 20px;
 }
 
 h1 {
