--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,11 @@ html, body {
     border-radius: 10px;
     padding: 10px;
     margin-right: 20px;
+    image-rendering: crisp-edges;
+}
+
+#logo img {
+    height: 150px;
 }
 
 #headercontent {
